# reach-alpha-5-manipulator

./: README.md
alpha_gazebo/alpha_description/urdf/: alpha.urdf.xacro
alpha_gazebo/alpha_gazebo/: CMakeLists.txt  package.xml
alpha_gazebo/alpha_gazebo/launch/: gazebo_alpha.launch.py  org_gazebo_alpha.launch.py
src/alpha/alpha_bringup/launch/: planning_alpha5.launch.py
src/alpha/alpha_description/config/: alpha.config.xacro  ros2_controllers.yaml
src/alpha/alpha_description/moveit2/: kinematics.yaml  moveit_controllers.yaml
src/alpha/alpha_description/rviz/: moveit.rviz
src/alpha/alpha_description/srdf/: alpha.srdf.xacro
src/alpha_gazebo/alpha_description/urdf/end_effectors/: standard_jaws.urdf.xacro
src/alpha_gazebo/alpha_gazebo/launch/: planning_alpha5.launch.py
src/alpha_moveit/: CMakeLists.txt  package.xml
src/alpha_moveit/src/: joint_moveit.cpp
